CSS/style1.css
/* CSS style test sheet */
body {
  margin-left: 0;
  padding-top: 5em;
  background-color: grey;
}
/* -------------------- MENU --------------------- */
/* ----------------------------------------------- */
#menu ul {
  list-style-type: none;
  width: 100%;
  position: fixed;
  margin: 0;
  padding: 0;
  top: 0;
  overflow: hidden;
  background-color: #333;
}

#menu li {
  float: left;
  border-right: 1px solid grey;
}

#menu li a {
  display: block;
  color: white;
  text-align: center;
  padding: 14px 40px;
  text-decoration: none;
}

#menu li a:hover {
  background-color: green;
}

.current {
  background-color: purple;
}

/* ------------------------------------------------ */
/* ---------------- BESTELLUNG -------------------- */
/* ------------------------------------------------ */
#pizzaSection, #basketSection {
  margin-left: 2em;
}
#pizzaP0 {
  margin: 1em 0em 0em 0em;
}
#pizzaP1 {
  margin: 0em;
}
.column {
  float: left;
  width: 50%;
}

@media screen and (min-width: 700px) {
  #basketSection {
    position: fixed;
    margin-left: 50%;
  }
}

@media screen and (max-width: 600px) {
  .column {
    width: 100%;
  }
}


/* ------------------------------------------------ */
/* ---------------- KUNDE ------------------------- */
/* ------------------------------------------------ */
#sectionKunde1 {
  margin: auto;
  width: 50%;
  border: 3px solid white;
  text-align: center;
}

input [type="radio"], label{
  display: block;
}

#fahrerMainSection {
  margin-left: 2em;
}

#fahrerMainSection ul {
  list-style: none;
  display: inline-block;
  margin: 0;
  padding-left: 0;
}

#fahrerMainSection ul li {
  float: left;
  display: block;
  width: 7em;
}

#fahrerMainSection #div1 {
  background-color: #6A6C6E;
}

#fahrerMainSection #fahrerP1 {
  font-weight: bold;
  font-size: 1.2em;
  line-height: 1em;
  margin-bottom: 0.2em;
}

#fahrerMainSection #fahrerP3 {
  font-weight: bold;
  font-size: 1.2em;
  line-height: 1em;
  margin-top: 0em;
  margin-bottom: 0.2em;
  color: #800000;
}

#fahrerMainSection #fahrerP2 {
  font-weight: bold;
  font-size: 1.2em;
  line-height: 1em;
  margin-top: 0em;
}

#bakerMainSection {
  font-size: 1.2em;
  margin-left: 2em;
}

#bakerMainSection tr:nth-child(even) {
  background-color: #6A6C6E;
}

#bakerMainSection #tr1 td {
  font-weight: bold;
}

#bakerMainSection tr, td {
  width: 5em;
}

#bakerMainSection #td1, #td2 {
  width: 15em;
}

#bakerMainSection em {
  font-style: normal;
  border: 1px solid white;
  width: 50%;
}

